SET(CMAKE_C_FLAGS "-std=gnu99")
SET(SRC_LIST server.c smalloc.c ../common/molten_slog.c)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/protocol/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../common/)
ADD_EXECUTABLE(mml ${SRC_LIST})
TARGET_LINK_LIBRARIES(mml pthread)
MESSAGE(STATUS "Build over")
