SET(CMAKE_C_FLAGS "-std=gnu99")
SET(SRC_LIST timer.c common.c socket.c protocol/protocol.c sstring.c net_client.c smalloc.c event_loop.c server.c ../common/molten_slog.c)
SET(CLIENT_SRC_LIST socket.c protocol/message.c sstring.c net_client.c client.c smalloc.c ../common/molten_slog.c)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/protocol/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../common/)
ADD_EXECUTABLE(molten_agent ${SRC_LIST})
ADD_EXECUTABLE(molten_client ${CLIENT_SRC_LIST})
TARGET_LINK_LIBRARIES(molten_agent pthread)
MESSAGE(STATUS "Build over")
